// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel schema test case Should create channel 1`] = `
Object {
  "createChannel": Object {
    "name": "test-foo",
  },
}
`;

exports[`Channel schema test case Should return all channels 1`] = `
Object {
  "channels": Array [
    Object {
      "name": "asasd",
    },
    Object {
      "name": "test-foo",
    },
    Object {
      "name": "test-foo1",
    },
  ],
}
`;

exports[`Channel schema test case Should return channel by id 1`] = `
Object {
  "channel": Object {
    "name": "test-foo",
  },
}
`;
